--- a/configure.in
+++ b/configure.in
@@ -17,7 +17,9 @@ case $host_os in
 
  freebsd*) 
     		AC_DEFINE(BSDHOST,1,BSD system)
+		BSDHOST=1
     		AC_DEFINE(FREEBSDHOST,1,FreeBSD system)
+		FREEBSDHOST=1
     		ARG="NOPAM"
  		AC_MSG_RESULT(yes)
 		;;
@@ -26,7 +28,9 @@ case $host_os in
 		;;
   netbsd*) 
     		AC_DEFINE(BSDHOST,1,BSD system)
+		BSDHOST=1
     		AC_DEFINE(NETBSDHOST,1,NetBSD system)
+		NETBSDHOST=1
     		ARG="NOPAM"
   		AC_MSG_RESULT(yes)
   		;;
@@ -65,7 +69,7 @@ AC_PROG_MAKE_SET
 
 dnl extra configure arguments
 
-AC_ARG_ENABLE(pam,[  --enable-pam            Enable pam support (default)],
+AC_ARG_ENABLE(pam,[  --enable-pam            Enable pam support (default) ],
    [ if test "$enableval" != "no"; then
         ARG="WITHPAM"
 	if test "$enableval" = "yes"; then
@@ -76,7 +80,7 @@ AC_ARG_ENABLE(pam,[  --enable-pam            Enable pam support (default)],
 
 AC_ARG_WITH(libcrack, [  --with-libcrack   try to use librack ])
 AC_ARG_ENABLE(md5crypt, [  --enable-md5crypt       include MD5-compatible crypt
-function (default)])
+function (default) ])
 
 dnl pam support test
 
@@ -104,16 +108,8 @@ if test "$ARG" = "WITHPAM"; then
          fi
       fi
 
-    fi
+   fi
 
-
-fi
-
-dnl freebsd has crypt() defined in unstd.h
-
-if test "$FREEBSDHOST" != "1"; then
-
-AC_CHECK_HEADERS(crypt.h,[ HAVE_CRYPT_H=1 ],AC_MSG_WARN(crypt.h not found))
 
 fi
 
@@ -162,50 +158,46 @@ fi
 
 if test "$with_libcrack" != "no"; then
    AC_CHECK_LIB(crack,FascistCheck,,AC_MSG_WARN(cracklib not found cracklib support is disabled!!!!))
-   if test "$HAVE_LIBCRACK" = "1"; then 
-   AC_CHECK_HEADERS(crack.h,,AC_MSG_WARN(crack.h not found usign built-in FascistCheck define...))
-   fi
 fi
 
 AC_CHECK_FUNCS(dbm_open dbm_fetch dbm_store dbm_close,,NEED_NDBMLIB="yes")
 
-if test "$NEED_NDBMLIB" = "yes"; then                                      dnl NEED_NDBM
+if test "$NEED_NDBMLIB" = "yes"; then
 
    AC_CHECK_LIB(ndbm,dbm_open,NDBM_LIB="yes",NDBM_LIB="no")
    AC_CHECK_LIB(ndbm,dbm_fetch,NDBM_LIB="yes",NDBM_LIB="no")
    AC_CHECK_LIB(ndbm,dbm_store,NDBM_LIB="yes",NDBM_LIB="no")
    AC_CHECK_LIB(ndbm,dbm_close,,NDBM_LIB="no")
 
-   if test "$NDBM_LIB" = "no"; then                                        dnl NDBM_LIB
+   if test "$NDBM_LIB" = "no"; then 
   
       AC_CHECK_LIB(gdbm,dbm_open,GDBM_LIB="yes",GDBM_LIB="no")
       AC_CHECK_LIB(gdbm,dbm_fetch,GDBM_LIB="yes",GDBM_LIB="no")
       AC_CHECK_LIB(gdbm,dbm_store,GDBM_LIB="yes",GDBM_LIB="no")
       AC_CHECK_LIB(gdbm,dbm_close,,GDBM_LIB="no")
       
-      if test "$GDBM_LIB" = "no"; then                                     dnl GDBM_LIB
+      if test "$GDBM_LIB" = "no"; then 
 
     	 AC_CHECK_LIB(gdbm_compat,dbm_open,GDBM_COMPAY="yes",GDBM_COMPAT_LIB="no")
      	 AC_CHECK_LIB(gdbm_compat,dbm_fetch,GDBM_COMPAY="yes",GDBM_COMPAT_LIB="no")
      	 AC_CHECK_LIB(gdbm_compat,dbm_store,GDBM_COMPAY="yes",GDBM_COMPAT_LIB="no")
      	 AC_CHECK_LIB(gdbm_compat,dbm_close,,GDBM_COMPAT_LIB="no")
 
-    	 if test "$GDBM_COMPAT_LIB" = "no"; then 			   dnl GDBM_COMPAT_LIB
-  
+    	 if test "$GDBM_COMPAT_LIB" = "no"; then 
 
             AC_CHECK_LIB(db1,dbm_open,DB1_LIB="yes",DB1_LIB="no")
             AC_CHECK_LIB(db1,dbm_fetch,DB1_LIB="yes",DB1_LIB="no")
             AC_CHECK_LIB(db1,dbm_store,DB1_LIB="yes",DB1LIB="no")
             AC_CHECK_LIB(db1,dbm_close,,DB1_LIB="no")
 
-            if test "$DB1_LIB" = "no";then                                 dnl DB1_LIB
+            if test "$DB1_LIB" = "no";then
   
                AC_CHECK_LIB(db,dbm_open,DB_LIB="yes",DB_LIB="no") 
                AC_CHECK_LIB(db,dbm_fetch,DB_LIB="yes",DB_LIB="no")
                AC_CHECK_LIB(db,dbm_store,DB_LIB="yes",DB_LIB="no") 
                AC_CHECK_LIB(db,dbm_close,,DB_LIB="no") 
 
-	       if test "$DB_LIB" = "no";then                               dnl DB_LIB
+	       if test "$DB_LIB" = "no";then
 
 	          old_libs=$LIBS
 	          LIBS="$LIBS -ldb"
@@ -217,7 +209,7 @@ if test "$NEED_NDBMLIB" = "yes"; then                                      dnl N
 	                      [dbm_open(0,0,0);],
 	                      [DB_COMPAT_LIB="yes"])
 
-	          if test "$DB_COMPAT_LIB" != "yes"; then		   dnl DB_COMPAT_LIB
+	          if test "$DB_COMPAT_LIB" != "yes"; then
 	          
 	             AC_MSG_RESULT(no)
 		     LIBS="$LIBS -lpthread"
@@ -229,28 +221,41 @@ if test "$NEED_NDBMLIB" = "yes"; then                                      dnl N
 	                         [dbm_open(0,0,0);],
 	                         [DB_COMPAT_LIB="yes"])
 
-	             if test "$DB_COMPAT_LIB" != "yes"; then		   dnl DB_COMPAT_LIB
+	             if test "$DB_COMPAT_LIB" != "yes"; then
 
 	                AC_MSG_RESULT(no)
 	                AC_MSG_ERROR(no valid ndbm library found)
 
-	             fi							   dnl DB_COMPAT_LIB
-	          fi							   dnl DB_COMPAT_LIB
+	             fi
+	          fi
 
 	          AC_DEFINE_UNQUOTED(HAVE_DB_H_DB_DBM_HSEARCH,"1",db4 with hsearch)
 	          AC_MSG_RESULT(yes)
 
-	       fi                                                          dnl DB_LIB
-            fi								   dnl DB1_LIB
-	 fi								   dnl GDBM_COMPAT_LIB
-      fi								   dnl GDBM_LIB
-   fi                                                                      dnl NDBM_LIB
-fi									   dnl NEED_NDBM
+	       fi  
+            fi	
+	 fi
+      fi
+   fi
+fi
 
 dnl Checks for header files.
 
 AC_HEADER_STDC
 
+dnl freebsd has crypt() defined in unstd.h
+
+if test "$FREEBSDHOST" != "1"; then
+
+AC_CHECK_HEADERS(crypt.h,,[ AC_MSG_WARN(crypt.h not found) ])
+
+fi
+
+if test "$HAVE_LIBCRACK" = "1"; then 
+
+   AC_CHECK_HEADERS(crack.h,,AC_MSG_WARN(crack.h not found usign built-in FascistCheck define...))
+
+fi
 
 HAVE_GDBMDIR_NDBM_H="NO_GDBMDIR_NDBM_H"
 
