--- a/configure.in
+++ b/configure.in
@@ -137,7 +137,7 @@ dnl freebsd has built-in md5 support
         OBJS="$OBJS md5.o md5crypt.o"
      fi
 
-     if test "$BSDHOST" = "1"; then
+     if test "$BSDHOST" != "1"; then
         OBJS="$OBJS fgetpwnam.o";
      else
         AC_MSG_WARN("BSD host detected vmail password are disabled")
