--- a/install.sh.in
+++ b/install.sh.in
@@ -45,7 +45,21 @@ if [ "$?" = "0" ]
    then
          rootgroup="wheel"
 fi
- 
+
+if [ ! -d $CGIBIN ]
+   then
+
+   echo "$CGIBIN doesn't exist...."
+   echo "Create $CGIBIN? (yes/no)"
+   read_yesno
+   
+   if [ "$YESNO" = "1" ]
+      then
+           mkdir -p $CGIBIN
+      fi
+
+fi
+
 if [ -d $CGIBIN ] 
    then
          mkdir -p @sysconfdir@
@@ -54,6 +68,8 @@ if [ -d $CGIBIN ]
          chmod 4555 $CGIBIN/passwd.cgi $CGIBIN/viewmailcfg.cgi $CGIBIN/mailcfg.cgi
    else
          echo "$CGIBIN doesn't exist...."
+	 echo "Can't copy binary files!!!!"
+	 sleep 5
 fi
 
 WWW="${datadir}"
@@ -72,6 +88,7 @@ if [ -d $WWW ]
               chmod 644 $WWW/cgipasswd*.php $WWW/mailcfg*.php $WWW/viewmailcfg*.php 
 	 else
 	    echo "Couldn't copy standard php files"
+	    sleep 5
 	 fi		   
 fi
    if [ -f $CFGFILE ]
