--- a/Makefile.in
+++ b/Makefile.in
@@ -15,7 +15,8 @@ libexecdir      = @libexecdir@
 sysconfdir      = @sysconfdir@
 localstatedir   = @localstatedir@
 srcdir          = @srcdir@
-HAVE_GDBMDIR_NDBM_H   = -D@HAVE_GDBMDIR_NDBM_H@
+HAVE_GDBMDIR_NDBM_H   	= -D@HAVE_GDBMDIR_NDBM_H@
+HAVE_CHPASS_CRYPT  	= -D@HAVE_CHPASS_CRYPT@
 inc_files       = msg.h cgipaf_defs.h cgipaf_vars.h cgipaf_acl.c cgipaf_pwlocation.c cgipaf_init.c
 CC=@CC@
 CFLAGS=@CFLAGS@
@@ -34,7 +35,7 @@ viewmailcfg.cgi: cgipaf.c ${OBJS} mailconfig.o ${inc_files}
 	$(CC) $(CFLAGS) -o viewmailcfg.cgi cgipaf.c ${OBJS} mailconfig.o @LIBS@ ${ARG} -DCONFIGFILE=\"$(CONFIGFILE)\" -DCGIPAF_VIEWMAILCFG
 	
 changepass: changepass.c ${CHPASSOBJS} ${inc_files}
-	$(CC) $(CFLAGS) -o changepass changepass.c ${CHPASSOBJS} @LIBS@ ${ARG} 
+	$(CC) $(CFLAGS) -o changepass changepass.c ${CHPASSOBJS} @LIBS@ ${ARG} ${HAVE_CHPASS_CRYPT}
 
 install: all
 	 su root -c "/bin/sh ./install.sh"
