--- a/config.h.in
+++ b/config.h.in
@@ -18,6 +18,9 @@
 /* Define to 1 if you have the <crypt.h> header file. */
 #undef HAVE_CRYPT_H
 
+/* Define to 1 if you have the <ctype.h> header file. */
+#undef HAVE_CTYPE_H
+
 /* Define to 1 if you have the <db1/ndbm.h> header file. */
 #undef HAVE_DB1_NDBM_H
 
@@ -258,6 +261,9 @@
 
 /* system os release */
 #undef HOSTREL
+
+/* GNU Linux system */
+#undef LINUXHOST
 
 /* Define to 1 if `lstat' dereferences a symlink specified with a trailing
    slash. */
